--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Stack Overflown - A Dev-Themed Puzzle Game</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <!-- Test -->
   <body>
     <div class="game-container">
       <div class="main-panel">
