Some other test changes

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           <div class="score" id="score">0</div>
           <div class="status" id="status">Playing...</div>
         </div>
-
+<!-- another comment -->
         <div class="info-section">
           <h3>Target Pattern</h3>
           <div class="pattern-preview">
